fix: table headers in dark mode (#3937)

--- a/themes/rusted/static/css/_base.scss
+++ b/themes/rusted/static/css/_base.scss
@@ -163,16 +163,16 @@ table {
     margin: 1em 0;
 
     td, th {
-        border: 1px solid #d2d2d2;
+        border: 1px solid $table-lines-color;
         padding: 2px 8px;
     }
 
     th {
-        background-color: #eeeeee;
+        background-color: $thead-color;
     }
 
     tr:nth-child(even) td {
-        background-color: #f7f7f7;
+        background-color: $table-even-color;
     }
 }
 
